Don't have a default value for tab counter
This is potentially misleading. Just showing nothing is better.

--- a/popup/tab_counter.html
+++ b/popup/tab_counter.html
@@ -13,7 +13,7 @@
 	  Current window
 	</td>
 	<td>
-	  <span class="counter" id="current-window">1</div>
+	  <span class="counter" id="current-window"></div>
 	</td>
       </tr>
       <tr>
@@ -21,7 +21,7 @@
 	  All windows
 	</td>
 	<td>
-	  <span class="counter" id="all-windows">2</div>
+	  <span class="counter" id="all-windows"></div>
 	</td>
       </tr>
     </table>
