Rename pop-up files to sum_tabs

--- a/popup/sum_tabs.html
+++ b/popup/sum_tabs.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="tab_counter.js"></script>
+    <script src="sum_tabs.js"></script>
   </head>
 
   <body>
