Do i18n in a cleaner way

--- a/popup/sum_tabs.html
+++ b/popup/sum_tabs.html
@@ -11,7 +11,7 @@
     <table>
       <tr>
 	<td>
-	  <span id="current-window-label"></span>
+	  <span data-i18n="currentWindow"></span>
 	</td>
 	<td>
 	  <span class="counter" id="current-window"></span>
@@ -19,7 +19,7 @@
       </tr>
       <tr>
 	<td>
-	  <span id="all-windows-label"></span>
+	  <span data-i18n="allWindows"></span>
 	</td>
 	<td>
 	  <span class="counter" id="all-windows"></span>
