--- a/popup/sum_tabs.html
+++ b/popup/sum_tabs.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8">
     <script src="sum_tabs.js"></script>
+    <script src="localize.js"></script>
   </head>
 
   <body>
     <table>
       <tr>
 	<td>
-	  Current window
+	  <span id="current-window-label"></span>
 	</td>
 	<td>
 	  <span class="counter" id="current-window"></div>
@@ -18,7 +19,7 @@
       </tr>
       <tr>
 	<td>
-	  All windows
+	  <span id="all-windows-label"></span>
 	</td>
 	<td>
 	  <span class="counter" id="all-windows"></div>
