Fix weird typo...

--- a/popup/sum_tabs.html
+++ b/popup/sum_tabs.html
@@ -14,7 +14,7 @@
 	  <span id="current-window-label"></span>
 	</td>
 	<td>
-	  <span class="counter" id="current-window"></div>
+	  <span class="counter" id="current-window"></span>
 	</td>
       </tr>
       <tr>
@@ -22,7 +22,7 @@
 	  <span id="all-windows-label"></span>
 	</td>
 	<td>
-	  <span class="counter" id="all-windows"></div>
+	  <span class="counter" id="all-windows"></span>
 	</td>
       </tr>
     </table>
